Solved the issue of vertical align of Public lab tittle in navbar (#9434)

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -220,19 +220,19 @@ a .fa-white,
   -moz-columns:2;
   columns:2;
 }
-
 #header .navbar-brand {
   color: white;
-  /*padding-top: 19px;*/
   font-family: "Junction Light", lucida grande,lucida sans console,sans-serif;
   font-size: 22px;
+  line-height: 22px;
+  padding-top: .5rem;
+  padding-bottom: .2rem;
 }
 
 @media (max-width: 768px) {
   #header #brand,
   #header #brand-compact {
-    margin-top: 0.3125rem;
-    padding-bottom: 0;
+    /* padding-top: 22px; */
     padding-right: 4px;
   }
 }
